# System-Optimiser

./: GETTING_STARTED.md  LICENSE.md  PLAN_SUMMARY.md  README.md  TROUBLESHOOTING.md  api-specification.md  database-schema.md  package-lock.json  package.json  run-dev.sh  system-optimizer-plan.md  tailwind.config.js  ui-ux-design.md
src/: App.tsx  index.css  test-button.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/system/: ai_suggestions.rs  battery.rs  boot_optimizer.rs  deep_sleep.rs  focus_mode.rs  hardware_health.rs  maintenance.rs  metrics.rs  mod.rs  rate_limiter.rs
src/components/: AISuggestions.tsx  AISuggestionsSimple.tsx  BatterySettings.tsx  BootAnalysis.tsx  Dashboard.tsx  DeepSleep.tsx  FocusModeSettingsModal.tsx  HardwareHealth.tsx  Layout.tsx  Optimizations.tsx
src/services/: optimizer.ts  tauri.ts
src/store/: index.ts
src/types/: index.ts
src/utils/: format.ts  pathValidator.ts
