[package]
name = "system-optimizer"
version = "1.0.0"
description = "Smart system optimization dashboard with AI-powered suggestions"
authors = ["System Optimizer Team"]
edition = "2021"

[lib]
name = "system_optimizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
validator = { version = "0.18", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.30"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
tokio-cron-scheduler = "0.15.1"
uuid = { version = "1.23.1", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
] }

